@@ -22,9 +22,9 @@
     "typo3-ter/static-info-tables-da": "self.version"
   },
   "require": {
-    "typo3/cms-core": "^11.5 || ^12.4 || ^13",
-    "sjbr/static-info-tables": "^11.5 || ^12.4 || ^13",
-    "jambagecom/addons-em": "^0.9.0"
+    "typo3/cms-core": "^12.4 || ^13",
+    "sjbr/static-info-tables": "^12.4 || ^13",
+    "jambagecom/addons-em": "^0.9"
   },
   "extra": {
     "typo3/cms": {
