@@ -4,7 +4,7 @@ $EM_CONF[$_EXTKEY] = [
     'title' => 'Static Info Tables (da)',
     'description' => 'Danish (da) language pack for the Static Info Tables providing localized names for countries, currencies and so on.',
     'category' => 'misc',
-    'version' => '11.5.3',
+    'version' => '12.4.0',
     'state' => 'stable',
     'clearcacheonload' => 1,
     'author' => 'Franz Holzinger',
@@ -12,8 +12,8 @@ $EM_CONF[$_EXTKEY] = [
     'author_company' => 'jambage.com',
     'constraints' => [
         'depends' => [
-            'typo3' => '11.5.0-13.4.99',
-            'static_info_tables' => '11.5.0-13.4.99',
+            'typo3' => '12.4.0-13.4.99',
+            'static_info_tables' => '12.4.0-13.4.99',
             'addons_em' => '0.9.0-0.12.99',
         ],
         'conflicts' => [
